# learning_git

./: readme.txt
aprilt/apriltag_ros/: CMakeLists.txt  package.xml
aprilt/apriltag_ros/apriltag_ros/include/apriltag_ros/: common_functions.h
aprilt/apriltag_ros/apriltag_ros/launch/: continuous_detection.launch
aprilt/apriltag_ros/apriltag_ros/src/: april_tf.cpp  common_functions.cpp  tf_listener.cpp
aprilt/apriltag_ros/cfg/: apriltag_location.cfg
aprilt/apriltag_ros/config/: apriltag_location.yaml  tags.yaml
aprilt/apriltag_ros/include/apriltag_ros/: apriltag_location.hpp  common_functions.h  continuous_detector.h
aprilt/apriltag_ros/launch/: apriltag_location.launch  continuous_detection.launch
aprilt/apriltag_ros/msg/: ApriltagCenter.msg
aprilt/apriltag_ros/src/: apriltag_location.cpp  common_functions.cpp  continuous_detector.cpp  tf_listener.cpp
aprilt/servo/visual_servo/: CMakeLists.txt
aprilt/servo/visual_servo/launch/: gazebo_pioneer_amcl.launch
aprilt/servo/visual_servo/src/: qr_track.cpp  tutorial-ros-pioneer-visual-servo.cpp
aprilt/servo/visual_servo/urdf/: pioneer3at_sensor.xacro  pioneer3dx.xacro
aprilt/visual_servo/include/visual_servo/: vpSimulatorPioneer.h
aprilt/visual_servo/src/: 4point.cpp  CMakeLists.txt  qqq.cpp  qr.cpp  qr_track.cpp  test.cpp  tutorial-ros-pioneer-visual-servo-4points.cpp  tutorial-ros-pioneer-visual-servo.cpp
aprilt/visual_servo/urdf/: pioneer3dx.xacro
state_machine/: CMakeLists.txt  package.xml
state_machine/include/state_machine/: state_machine_reply.hpp  state_machine_request.hpp
state_machine/json/: request.json
state_machine/launch/: start.launch  state_machine.launch
state_machine/msg/: pose.msg  state_machine_reply.msg  state_machine_request.msg
state_machine/src/: state_machine_reply_node.cpp  state_machine_request.cpp  state_machine_request_node.cpp
